update dependencies and fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,15 @@
 @tailwind utilities;
 
 @layer base {
-  nav {
+  nav,
+  aside {
     padding-right: var(--removed-body-scroll-bar-size) !important;
+  }
+
+  @media only screen and (min-width: 768px) {
+    aside {
+      padding-right: 0 !important;
+    }
   }
 
   aside::-webkit-scrollbar {
